@@ -1,3 +1,9 @@
+2004-12-28 12:10 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Palettes/1Windows/GormNSPanel.m
+	* Palettes/1Windows/GormNSWindow.m: Initialize the miniaturized
+	window image to nil.
+
 2004-12-28 08:38 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Palettes/0Menus/GormMenuEditor.m: Improvement on previous
